--- a/style.css
+++ b/style.css
@@ -142,6 +142,10 @@ img {
   padding-top: 100px;
   padding-bottom: 70px; }
 
+.section-padding-0-10 {
+  padding-top: 0px;
+  padding-bottom: 10px; }
+
 /* :: 3.4.0 Section Heading */
 .section-heading {
   position: relative;
@@ -1285,7 +1289,7 @@ img {
       position: absolute;
       z-index: 10;
       top: -30px;
-      left: 30px;
+      right: 30px;
       padding: 17px 0; }
       .single-blog-post .blog-post-thumb .post-date span {
         display: block;
