--- a/style.css
+++ b/style.css
@@ -174,6 +174,61 @@ img {
       .section-heading.style-2 h2 {
         font-size: 24px; } }
 
+.section-heading-mb-50 {
+  position: relative;
+  z-index: 1;
+  margin-bottom: 50px;
+  text-align: center; }
+  .section-heading-mb-50 p {
+    color: #5f5f5f;
+    font-size: 14px;
+    margin-bottom: 5px; }
+  .section-heading-mb-50 h2 {
+    font-size: 18px;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    margin-bottom: 0; }
+    @media only screen and (max-width: 767px) {
+      .section-heading-mb-50 h2 {
+        letter-spacing: 5px; } }
+  .section-heading-mb-50.white h2 {
+    color: #fff; }
+  .section-heading-mb-50.style-2 p {
+    font-size: 16px; }
+  .section-heading-mb-50.style-2 h2 {
+    font-size: 30px; }
+    @media only screen and (max-width: 767px) {
+      .section-heading-mb-50.style-2 h2 {
+        font-size: 24px; } }
+
+.section-heading-mt-50 {
+  position: relative;
+  z-index: 1;
+  margin-bottom: 50px;
+  margin-top: 50px;
+  text-align: center; }
+  .section-heading-mt-50 p {
+    color: #5f5f5f;
+    font-size: 14px;
+    margin-bottom: 5px; }
+  .section-heading-mt-50 h2 {
+    font-size: 18px;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    margin-bottom: 0; }
+    @media only screen and (max-width: 767px) {
+      .section-heading-mt-50 h2 {
+        letter-spacing: 5px; } }
+  .section-heading-mt-50.white h2 {
+    color: #fff; }
+  .section-heading-mt-50.style-2 p {
+    font-size: 16px; }
+  .section-heading-mt-50.style-2 h2 {
+    font-size: 30px; }
+    @media only screen and (max-width: 767px) {
+      .section-heading-mt-50.style-2 h2 {
+        font-size: 24px; } }
+
 /* :: 3.5.0 Preloader */
 .preloader {
   background-color: #ffffff;
