Update fonts and logos

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,7 +7,7 @@
 
 /* :: 1.0 Import Fonts */
 
-@import url('https://fonts.googleapis.com/css?family=Archivo+Narrow:400,400i,500,500i,600,600i,700,700i');
+@import url('https://fonts.googleapis.com/css?family=Arsenal');
 
 /* :: 2.0 Import All CSS */
 
