--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* [Master Stylesheet - v1.0] */
 /* :: 1.0 Import Fonts */
-@import url("https://fonts.googleapis.com/css?family=Archivo+Narrow:400,400i,500,500i,600,600i,700,700i");
+@import url("https://fonts.googleapis.com/css?family=Arsenal");
 /* :: 2.0 Import All CSS */
 @import url(css/bootstrap.min.css);
 @import url(css/classy-nav.css);
@@ -16,7 +16,7 @@
   padding: 0; }
 
 body {
-  font-family: "Archivo Narrow", sans-serif;
+  font-family: "Arsenal", "Archivo Narrow", sans-serif;
   font-size: 14px; }
 
 h1,
@@ -25,13 +25,13 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Archivo Narrow", sans-serif;
+  font-family: "Arsenal", "Archivo Narrow", sans-serif;
   color: #000000;
   line-height: 1.3;
   font-weight: 700; }
 
 p {
-  font-family: "Archivo Narrow", sans-serif;
+  font-family: "Arsenal", "Archivo Narrow", sans-serif;
   color: #5f5f5f;
   font-size: 15px;
   line-height: 2;
@@ -47,7 +47,7 @@ a:focus {
   color: #000000;
   font-weight: 700;
   font-size: 16px;
-  font-family: "Archivo Narrow", sans-serif; }
+  font-family: "Arsenal", "Archivo Narrow", sans-serif; }
 
 ul,
 ol {
