Update slideshow and fonts

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,7 +7,7 @@
 
 /* :: 1.0 Import Fonts */
 
-@import url('https://fonts.googleapis.com/css?family=Arsenal');
+@import url('https://fonts.googleapis.com/css?family=Sora');
 
 /* :: 2.0 Import All CSS */
 
