--- a/scss/style.scss
+++ b/scss/style.scss
@@ -216,6 +216,9 @@ img {
         }
     }
     &.white {
+        h1 {
+            color: #fff;
+        }
         h2 {
             color: #fff;
         }
