--- a/css/style.css
+++ b/css/style.css
@@ -973,7 +973,7 @@ nav.main-menu {
      padding-left: 0px;
 }
 .header-top {
-     background:url(../img/fff_background.png);
+     background:url(../img/rds_background.jpg);
      background-size: 100% 100%;
      background-repeat: no-repeat;
      padding-bottom: 50px;
@@ -1280,7 +1280,7 @@ nav.main-menu {
      justify-content: center;
      position: absolute;
      top: 0;
-     width: 90%;
+     width: 85%;
      /* width: 92.5%; */
      box-sizing: border-box;
      float: left;
